<resources>
    <string name="app_name">Howl</string>
    <string name="label1">Contraseña</string>
    <string name="label2">Name</string>
    <string name="label3">Usuario</string>
    <string name="label4">Inicio de sesión</string>
    <string name="label5">Registrarse</string>
    <string name="boton1">Olvide contraseña</string>
    <string name="boton2">Accesar</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="register_main">Registro</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="corr">Correo</string>
    <string name="batiz">¿Eres batiziano?</string>
    <string name="sig1">Continuar</string>

    <string name="eje">Correo example</string>
    <string name="man">Hombre</string>
    <string name="wom">Mujer</string>
    <string name="gen">Género</string>
    <string name="not">¿Notificaciones?</string>

    <string name="num">Número</string>
    <string name="fec">Fecha</string>
    <string name="eda">Edad</string>
    <string name="pol">¿Eres politécnico?</string>
    <string name="fel">¿Eres feliz?</string>
    <string name="emp">By: Technoswamp</string>
    <string name="res">Recuperar</string>
    <string name="mu">Menú</string>
    <string name="xd">Empty</string>
    <string name="bienvenido_label">¡Bienvenido!</string>
    <string name="contra">Contraseñas de sitios:</string>

    <string name="add_label">Añadir</string>
    <string name="del_label">Eliminar</string>
    <string name="mod_label">Modificar</string>

    <string name="Agregar">Añadir</string>
    <string name="ne">Nueva contraseña</string>
    <string name="plataforma">Plataforma</string>
    <string name="ADV">Presiona la contraseña a eliminar</string>
    <string name="r">Listo</string>
    <string name="c">Concluir</string>

    <string name="c_con">Contraseña:</string>
    <string name="c_tit">Mis contraseñas de Battle:</string>
    <string name="c_bat">BattleTag:</string>

    <string name="l_con">Estás son tus contraseñas:</string>

    <string name="modi">Editar</string>
    <string name="ele">Borrar</string>
    <string name="masa">Agregar</string>
    <string name="envy">Enviar</string>

    <string name="weather">Clima</string>
    <string name="country_iso_code">Código ISO del País :</string>
    <string name="code">Código</string>
    <string name="city_name">Nombre de Ciudad :</string>
    <string name="name">Nombre</string>
    <string name="get">Obtener</string>
    <string name="temperature">Temperatura</string>
    <string name="current">Actual :</string>
    <string name="minimum">Mínima :</string>
    <string name="maximum">Máxima :</string>
    <string name="pressure">Presión :</string>
    <string name="humidity">Humedad :</string>
    <string name="Fields_cannot_be_empty">Los campos no pueden ser vacíos</string>
    <string name="loc">Ubicación :</string>
    <string name="img">Cambiar :</string>
    <string name="c1">Contraseña correo</string>
    <string name="c2">Nueva contraseña</string>
    <string name="exp">Ingresa tu usuario, la contraseña enviada por correo, y la nueva contraseña que quieres utilizar</string>
    <string name="v1">Volver al registro</string>
    <string name="v2">Ingresar con nueva contraseña</string>


</resources>